// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compatibility route /publications should return only public sources 1`] = `
Array [
  Object {
    "enabled": true,
    "id": "a",
    "image": "http://a.com",
    "name": "A",
  },
  Object {
    "enabled": true,
    "id": "b",
    "image": "http://b.com",
    "name": "B",
  },
]
`;

exports[`members field should return source members 1`] = `
Object {
  "source": Object {
    "id": "a",
    "members": Object {
      "edges": Array [
        Object {
          "node": Object {
            "role": "member",
            "source": Object {
              "id": "a",
            },
            "user": Object {
              "id": "2",
            },
          },
        },
        Object {
          "node": Object {
            "role": "owner",
            "source": Object {
              "id": "a",
            },
            "user": Object {
              "id": "1",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "dGltZTpOYU4=",
        "hasNextPage": false,
      },
    },
  },
}
`;

exports[`members field should return source members for private source when the user is a member 1`] = `
Object {
  "edges": Array [
    Object {
      "node": Object {
        "role": "member",
        "source": Object {
          "id": "a",
        },
        "user": Object {
          "id": "2",
        },
      },
    },
    Object {
      "node": Object {
        "role": "owner",
        "source": Object {
          "id": "a",
        },
        "user": Object {
          "id": "1",
        },
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "dGltZTpOYU4=",
    "hasNextPage": false,
  },
}
`;

exports[`query source should return source by 1`] = `
Object {
  "source": Object {
    "id": "a",
    "image": "http://a.com",
    "name": "A",
    "public": true,
  },
}
`;

exports[`query sources should flag that more pages available 1`] = `
Object {
  "sources": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "a",
          "image": "http://a.com",
          "name": "A",
          "public": true,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "hasNextPage": true,
    },
  },
}
`;

exports[`query sources should return only active sources 1`] = `
Object {
  "sources": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "a",
          "image": "http://a.com",
          "name": "A",
          "public": true,
        },
      },
      Object {
        "node": Object {
          "id": "b",
          "image": "http://b.com",
          "name": "B",
          "public": true,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query sources should return only public sources 1`] = `
Object {
  "sources": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "a",
          "image": "http://a.com",
          "name": "A",
          "public": true,
        },
      },
      Object {
        "node": Object {
          "id": "b",
          "image": "http://b.com",
          "name": "B",
          "public": true,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;
